Applies suggestion to column-span.yml description
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/column-span.yml
+++ b/features/column-span.yml
@@ -1,5 +1,5 @@
 name: column-span
-description: The `column-span` CSS property displays a child element across all columns of a multi-column parent.
+description: The `column-span` CSS property controls whether a child element extends across all columns of a multi-column parent.
 spec: https://drafts.csswg.org/css-multicol-1/#spanning-columns
 group: multi-column
 compat_features:
