Applies suggestion to page-selectors group
Co-authored-by: James Stuckey Weber <jamesnw@gmail.com>

--- a/features/page-selectors.yml
+++ b/features/page-selectors.yml
@@ -2,7 +2,7 @@ name: Page selectors
 description: The `page` CSS property matches a page defined by an `@page` rule. The `:first`, `:left`, and `:right` pseudo-classes match pages based on their position in sequence after pagination.
 spec: https://drafts.csswg.org/css-page-3/#page-selectors
 group:
-  - css
+  - selectors
   - print
 compat_features:
   - css.properties.page
