--- a/features/page-setup.yml
+++ b/features/page-setup.yml
@@ -1,5 +1,5 @@
 name: Page setup
-description: The `@page` rule sets the page-specific dimensions, and margins for content such as printed documents, ebooks, or slides.
+description: The `@page` rule sets the page-specific dimensions and margins for content such as printed documents, ebooks, or slides.
 spec: https://drafts.csswg.org/css-page-3/#at-page-rule
 group:
   - layout
