Updates description for page-orientation.yml

--- a/features/page-orientation.yml
+++ b/features/page-orientation.yml
@@ -1,5 +1,5 @@
 name: page-orientation
-description: The `page-orientation` CSS property sets the rotation of a page after it has been layed out. This allows pages with the same `size` declaration to display at different orientations.
+description: The `page-orientation` CSS property sets the rotation of a page after pagination. This allows pages with the same `size` declaration to display with different orientations.
 spec: https://drafts.csswg.org/css-page-3/#page-orientation-prop
 group:
   - layout
