--- a/features/async-iterable-streams.yml
+++ b/features/async-iterable-streams.yml
@@ -1,5 +1,5 @@
 name: Asynchronously iterable streams
-description: Asynchronous iteration of a stream allows you to use `for await...of` loops to iterate through a stream's incoming data.
+description: Asynchronous iteration of a stream allows you to use `for await … of` loops to iterate through a stream's incoming data.
 spec: https://streams.spec.whatwg.org/#rs-asynciterator
 group: streams
 compat_features:
