--- a/features/page-breaks.yml
+++ b/features/page-breaks.yml
@@ -4,6 +4,7 @@ spec: https://drafts.csswg.org/css-break-4/#breaking-controls
 group: layout
 caniuse: css-page-break
 status:
+  # TODO: review this when https://github.com/web-platform-dx/web-features/issues/1878 is resolved
   compute_from: css.properties.page-break-after.avoid
 compat_features:
   - css.properties.break-after
