Simplify spec link

--- a/features/element-from-point.yml
+++ b/features/element-from-point.yml
@@ -1,8 +1,6 @@
 name: document.elementFromPoint() and document.elementsFromPoint()
 description: The `document.elementFromPoint()` and `document.elementsFromPoint()` find the top-most element at a given point in the viewport, or all elements at a given point in the viewport, respectively.
-spec:
-  - https://drafts.csswg.org/cssom-view/#dom-document-elementfrompoint
-  - https://drafts.csswg.org/cssom-view/#dom-document-elementsfrompoint
+spec: https://drafts.csswg.org/cssom-view/
 caniuse: element-from-point
 compat_features:
   - api.Document.elementFromPoint
