--- a/features/element-from-point.yml
+++ b/features/element-from-point.yml
@@ -1,5 +1,5 @@
 name: document.elementFromPoint() and document.elementsFromPoint()
-description: The `document.elementFromPoint()` and `document.elementsFromPoint()` find the top-most element at a given point in the viewport, or all elements at a given point in the viewport, respectively.
+description: The `document.elementFromPoint()` and `document.elementsFromPoint()` methods find the top-most element at a given point in the viewport, or all elements at a given point in the viewport, respectively.
 spec:
   - https://drafts.csswg.org/cssom-view-1/#dom-document-elementfrompoint
   - https://drafts.csswg.org/cssom-view-1/#dom-document-elementsfrompoint
