Add missing cjk-ideographic key

--- a/features/list-style.yml
+++ b/features/list-style.yml
@@ -20,6 +20,7 @@ compat_features:
   - css.properties.list-style-type.cjk-decimal
   - css.properties.list-style-type.cjk-earthly-branch
   - css.properties.list-style-type.cjk-heavenly-stem
+  - css.properties.list-style-type.cjk-ideographic
   - css.properties.list-style-type.decimal
   - css.properties.list-style-type.decimal-leading-zero
   - css.properties.list-style-type.devanagari
