--- a/features/fit-content-function.yml
+++ b/features/fit-content-function.yml
@@ -1,5 +1,5 @@
 name: fit-content()
-description: The `fit-content()` CSS function clamps a size between `min-content` and `max-content`.
+description: The `fit-content()` CSS function, used outside of a grid layout property, clamps a length between `min-content` and `max-content`.
 spec: https://drafts.csswg.org/css-sizing-3/#funcdef-width-fit-content
 group: layout
 compat_features:
