--- a/features/min-max-content.yml
+++ b/features/min-max-content.yml
@@ -1,5 +1,5 @@
 name: min-content and max-content
-description: The `min-content` and `max-content` CSS keywords represent the smallest and largest intrinsic size of an element.
+description: The `min-content` and `max-content` CSS keywords represent the smallest and largest intrinsic sizes of an element.
 spec:
   - https://drafts.csswg.org/css-sizing-3/#valdef-width-max-content
   - https://drafts.csswg.org/css-sizing-3/#valdef-width-min-content
