Adds positioning group, updates descriptions and groups

--- a/features/fixed-positioning.yml
+++ b/features/fixed-positioning.yml
@@ -1,6 +1,6 @@
 name: Fixed positioning
-description: "The `position: fixed` CSS declaration removes an element from the normal flow and positions an element relative to the viewport or page."
+description: "The `position: fixed` CSS declaration removes an element from the normal flow and positions it relative to the viewport or page."
 spec: https://drafts.csswg.org/css-position-3/#abspos-insets
-group: layout
+group: positioning
 compat_features:
   - css.properties.position.fixed
