--- a/features/absolute-positioning.yml
+++ b/features/absolute-positioning.yml
@@ -1,6 +1,6 @@
 name: Absolute positioning
-description: "The `position: absolute` CSS declaration removes an element from the normal flow and positions an element relative to its containing block or closest positioned ancestor."
+description: "The `position: absolute` CSS declaration removes an element from the normal flow and positions it relative to its containing block or closest positioned ancestor."
 spec: https://drafts.csswg.org/css-position-3/#abspos-insets
-group: layout
+group: positioning
 compat_features:
   - css.properties.position.absolute
