--- a/features/position.yml
+++ b/features/position.yml
@@ -1,6 +1,6 @@
 name: Position
-description: The `position` CSS property sets the scheme used to calculate the position of an element. Schemes set the origin position of the box based an element, the element's scrollport, or the viewport.
+description: The `position` CSS property sets the origin position of an element to an element, the element's scrollport, or the viewport.
 spec: https://drafts.csswg.org/css-position-3/#position-property
-group: layout
+group: positioning
 compat_features:
   - css.properties.position
