Fixes incorrect key

--- a/features/static-positioning.yml
+++ b/features/static-positioning.yml
@@ -3,4 +3,4 @@ description: "The `position: static` CSS declaration positions an element in the
 spec: https://drafts.csswg.org/css-position-3/#position-property
 group: positioning
 compat_features:
-  - css.properties.position.relative
+  - css.properties.position.static
