--- a/features/static-positioning.yml.dist
+++ b/features/static-positioning.yml.dist
@@ -14,4 +14,4 @@ status:
     safari: "1"
     safari_ios: "1"
 compat_features:
-  - css.properties.position.relative
+  - css.properties.position.static
