--- a/features/overflow-shorthand.yml
+++ b/features/overflow-shorthand.yml
@@ -3,3 +3,29 @@ description: The `overflow` CSS property sets the behavior for when content does
 spec: https://drafts.csswg.org/css-overflow-3/#propdef-overflow
 group: css
 caniuse: css-overflow
+status:
+  compute_from: css.properties.overflow.clip
+compat_features:
+  - css.properties.overflow
+  - css.properties.overflow-block
+  - css.properties.overflow-inline
+  - css.properties.overflow-x
+  - css.properties.overflow-x.auto
+  - css.properties.overflow-x.clip
+  - css.properties.overflow-x.hidden
+  - css.properties.overflow-x.scroll
+  - css.properties.overflow-x.visible
+  - css.properties.overflow-y
+  - css.properties.overflow-y.auto
+  - css.properties.overflow-y.clip
+  - css.properties.overflow-y.hidden
+  - css.properties.overflow-y.scroll
+  - css.properties.overflow-y.visible
+  - css.properties.overflow.auto
+  - css.properties.overflow.clip
+  - css.properties.overflow.hidden
+  - css.properties.overflow.multiple_keywords
+  - css.properties.overflow.scroll
+  - css.properties.overflow.visible
+  - css.types.overflow
+  - css.types.overflow.clip
