--- a/features/overflow-shorthand.yml.dist
+++ b/features/overflow-shorthand.yml.dist
@@ -34,12 +34,72 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: ≤3
+  #   safari_ios: ≤2
+  - css.properties.overflow.auto
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "2"
+  - css.properties.overflow.hidden
+  - css.properties.overflow.scroll
+  - css.properties.overflow.visible
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "3.5"
   #   firefox_android: "4"
   #   safari: "3"
   #   safari_ios: "1"
   - css.properties.overflow-x
   - css.properties.overflow-y
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.5"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: ≤2
+  - css.properties.overflow-x.auto
+  - css.properties.overflow-y.auto
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.5"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "2"
+  - css.properties.overflow-x.hidden
+  - css.properties.overflow-x.scroll
+  - css.properties.overflow-x.visible
+  - css.properties.overflow-y.hidden
+  - css.properties.overflow-y.scroll
+  - css.properties.overflow-y.visible
 
   # baseline: high
   # baseline_low_date: 2020-03-24
@@ -69,3 +129,10 @@ compat_features:
   - css.properties.overflow-y.clip
   - css.properties.overflow.clip
   - css.types.overflow.clip
+
+  # baseline: false
+  # support:
+  #   firefox: "69"
+  #   firefox_android: "79"
+  - css.properties.overflow-block
+  - css.properties.overflow-inline
