--- a/features/scrollbar-gutter.yml.dist
+++ b/features/scrollbar-gutter.yml.dist
@@ -11,3 +11,5 @@ status:
     firefox_android: "97"
 compat_features:
   - css.properties.scrollbar-gutter
+  - css.properties.scrollbar-gutter.auto
+  - css.properties.scrollbar-gutter.stable
