--- a/features/q-length-unit.yml
+++ b/features/q-length-unit.yml
@@ -1,4 +1,8 @@
 name: Q length unit
-description: The CSS `Q` length unit is an absolute length anchored to the physical measurement of quarter-millimeters. 1q is equivalent to 1/40 of 1cm.
-spec: https://drafts.csswg.org/css-values/#absolute-lengths
-caniuse: css_types_length_q
+description: The `Q` CSS length unit is an absolute length anchored to the physical measurement of quarter-millimeters. 1Q is equivalent to 1/40 of 1cm.
+spec: https://drafts.csswg.org/css-values-4/#absolute-lengths
+status:
+  compute_from: css.types.length.Q
+compat_features:
+  - css.types.length.Q
+  - api.CSS.Q_static
