--- a/features/draft/spec/html.yml
+++ b/features/draft/spec/html.yml
@@ -3,6 +3,576 @@ name: HTML Standard
 description: TODO
 spec: https://html.spec.whatwg.org/multipage/
 compat_features:
+  - api.BarProp
+  - api.BarProp.visible
+  - api.BeforeUnloadEvent
+  - api.CanvasPattern
+  - api.CanvasPattern.setTransform
+  - api.CloseWatcher
+  - api.CloseWatcher.CloseWatcher
+  - api.CloseWatcher.cancel_event
+  - api.CloseWatcher.close
+  - api.CloseWatcher.close_event
+  - api.CloseWatcher.destroy
+  - api.CloseWatcher.requestClose
+  - api.CustomElementRegistry.get
+  - api.CustomElementRegistry.getName
+  - api.CustomElementRegistry.upgrade
+  - api.CustomElementRegistry.whenDefined
+  - api.DOMParser
+  - api.DOMParser.DOMParser
+  - api.DOMParser.parseFromString
+  - api.DOMStringList
+  - api.DOMStringList.contains
+  - api.DOMStringList.item
+  - api.DOMStringList.length
+  - api.DOMStringMap
+  - api.DataTransfer
+  - api.DataTransfer.DataTransfer
+  - api.DataTransfer.clearData
+  - api.DataTransfer.dropEffect
+  - api.DataTransfer.effectAllowed
+  - api.DataTransfer.files
+  - api.DataTransfer.getData
+  - api.DataTransfer.items
+  - api.DataTransfer.setData
+  - api.DataTransfer.setDragImage
+  - api.DataTransfer.types
+  - api.DataTransferItem
+  - api.DataTransferItem.getAsFile
+  - api.DataTransferItem.getAsString
+  - api.DataTransferItem.kind
+  - api.DataTransferItem.type
+  - api.DataTransferItemList
+  - api.DataTransferItemList.add
+  - api.DataTransferItemList.clear
+  - api.DataTransferItemList.length
+  - api.DataTransferItemList.remove
+  - api.DedicatedWorkerGlobalScope
+  - api.DedicatedWorkerGlobalScope.close
+  - api.DedicatedWorkerGlobalScope.message_event
+  - api.DedicatedWorkerGlobalScope.name
+  - api.DedicatedWorkerGlobalScope.postMessage
+  - api.Document
+  - api.Document.DOMContentLoaded_event
+  - api.Document.activeElement
+  - api.Document.body
+  - api.Document.close
+  - api.Document.cookie
+  - api.Document.currentScript
+  - api.Document.defaultView
+  - api.Document.designMode
+  - api.Document.dir
+  - api.Document.embeds
+  - api.Document.forms
+  - api.Document.getElementsByName
+  - api.Document.hasFocus
+  - api.Document.head
+  - api.Document.hidden
+  - api.Document.images
+  - api.Document.lastModified
+  - api.Document.links
+  - api.Document.location
+  - api.Document.open
+  - api.Document.plugins
+  - api.Document.readyState
+  - api.Document.readystatechange_event
+  - api.Document.referrer
+  - api.Document.scripts
+  - api.Document.scroll_event
+  - api.Document.securitypolicyviolation_event
+  - api.Document.title
+  - api.Document.visibilityState
+  - api.Document.visibilitychange_event
+  - api.Document.write
+  - api.Document.writeln
+  - api.DragEvent
+  - api.DragEvent.DragEvent
+  - api.DragEvent.dataTransfer
+  - api.Element.auxclick_event
+  - api.Element.beforematch_event
+  - api.Element.blur_event
+  - api.Element.focus_event
+  - api.Element.getHTML
+  - api.Element.innerHTML
+  - api.Element.insertAdjacentHTML
+  - api.Element.keydown_event
+  - api.Element.keyup_event
+  - api.Element.outerHTML
+  - api.Element.scroll_event
+  - api.Element.securitypolicyviolation_event
+  - api.Element.wheel_event
+  - api.ElementInternals.shadowRoot
+  - api.ErrorEvent
+  - api.ErrorEvent.ErrorEvent
+  - api.ErrorEvent.colno
+  - api.ErrorEvent.error
+  - api.ErrorEvent.filename
+  - api.ErrorEvent.lineno
+  - api.ErrorEvent.message
+  - api.EventSource
+  - api.EventSource.EventSource
+  - api.EventSource.close
+  - api.EventSource.error_event
+  - api.EventSource.message_event
+  - api.EventSource.open_event
+  - api.EventSource.readyState
+  - api.EventSource.url
+  - api.EventSource.withCredentials
+  - api.FileList
+  - api.FormDataEvent
+  - api.FormDataEvent.FormDataEvent
+  - api.FormDataEvent.formData
+  - api.HTMLAllCollection
+  - api.HTMLAllCollection.item
+  - api.HTMLAllCollection.length
+  - api.HTMLAllCollection.namedItem
+  - api.HTMLAnchorElement.download
+  - api.HTMLAnchorElement.ping
+  - api.HTMLAreaElement.download
+  - api.HTMLAreaElement.ping
+  - api.HTMLCanvasElement.getContext.bitmaprenderer_context.options_alpha_parameter
+  - api.HTMLDListElement
+  - api.HTMLDetailsElement.toggle_event
+  - api.HTMLDocument
+  - api.HTMLElement
+  - api.HTMLElement.accessKey
+  - api.HTMLElement.accessKeyLabel
+  - api.HTMLElement.autocapitalize
+  - api.HTMLElement.blur
+  - api.HTMLElement.change_event
+  - api.HTMLElement.click
+  - api.HTMLElement.contentEditable
+  - api.HTMLElement.dataset
+  - api.HTMLElement.dir
+  - api.HTMLElement.drag_event
+  - api.HTMLElement.dragend_event
+  - api.HTMLElement.dragenter_event
+  - api.HTMLElement.draggable
+  - api.HTMLElement.dragleave_event
+  - api.HTMLElement.dragover_event
+  - api.HTMLElement.dragstart_event
+  - api.HTMLElement.drop_event
+  - api.HTMLElement.enterKeyHint
+  - api.HTMLElement.focus
+  - api.HTMLElement.hidden
+  - api.HTMLElement.innerText
+  - api.HTMLElement.inputMode
+  - api.HTMLElement.isContentEditable
+  - api.HTMLElement.lang
+  - api.HTMLElement.nonce
+  - api.HTMLElement.outerText
+  - api.HTMLElement.spellcheck
+  - api.HTMLElement.title
+  - api.HTMLFormControlsCollection
+  - api.HTMLFormControlsCollection.namedItem
+  - api.HTMLIFrameElement.sandbox
+  - api.HTMLImageElement.currentSrc
+  - api.HTMLImageElement.sizes
+  - api.HTMLImageElement.sizes.auto
+  - api.HTMLImageElement.srcset
+  - api.HTMLInputElement
+  - api.HTMLInputElement.accept
+  - api.HTMLInputElement.alt
+  - api.HTMLInputElement.autocomplete
+  - api.HTMLInputElement.cancel_event
+  - api.HTMLInputElement.checked
+  - api.HTMLInputElement.defaultChecked
+  - api.HTMLInputElement.defaultValue
+  - api.HTMLInputElement.disabled
+  - api.HTMLInputElement.files
+  - api.HTMLInputElement.form
+  - api.HTMLInputElement.formAction
+  - api.HTMLInputElement.formEnctype
+  - api.HTMLInputElement.formMethod
+  - api.HTMLInputElement.formNoValidate
+  - api.HTMLInputElement.formTarget
+  - api.HTMLInputElement.height
+  - api.HTMLInputElement.indeterminate
+  - api.HTMLInputElement.invalid_event
+  - api.HTMLInputElement.labels
+  - api.HTMLInputElement.list
+  - api.HTMLInputElement.max
+  - api.HTMLInputElement.maxLength
+  - api.HTMLInputElement.min
+  - api.HTMLInputElement.minLength
+  - api.HTMLInputElement.multiple
+  - api.HTMLInputElement.name
+  - api.HTMLInputElement.pattern
+  - api.HTMLInputElement.placeholder
+  - api.HTMLInputElement.readOnly
+  - api.HTMLInputElement.required
+  - api.HTMLInputElement.select
+  - api.HTMLInputElement.select_event
+  - api.HTMLInputElement.selectionDirection
+  - api.HTMLInputElement.selectionEnd
+  - api.HTMLInputElement.selectionStart
+  - api.HTMLInputElement.setRangeText
+  - api.HTMLInputElement.setSelectionRange
+  - api.HTMLInputElement.size
+  - api.HTMLInputElement.src
+  - api.HTMLInputElement.step
+  - api.HTMLInputElement.stepDown
+  - api.HTMLInputElement.stepUp
+  - api.HTMLInputElement.type
+  - api.HTMLInputElement.value
+  - api.HTMLInputElement.valueAsDate
+  - api.HTMLInputElement.valueAsNumber
+  - api.HTMLInputElement.width
+  - api.HTMLMediaElement.getStartDate
+  - api.HTMLMediaElement.srcObject
+  - api.HTMLMediaElement.textTracks
+  - api.HTMLMeterElement
+  - api.HTMLMeterElement.high
+  - api.HTMLMeterElement.labels
+  - api.HTMLMeterElement.low
+  - api.HTMLMeterElement.max
+  - api.HTMLMeterElement.min
+  - api.HTMLMeterElement.optimum
+  - api.HTMLMeterElement.value
+  - api.HTMLOptionsCollection
+  - api.HTMLOptionsCollection.add
+  - api.HTMLOptionsCollection.length
+  - api.HTMLOptionsCollection.remove
+  - api.HTMLOptionsCollection.selectedIndex
+  - api.HTMLScriptElement.noModule
+  - api.HTMLSourceElement
+  - api.HTMLSourceElement.height
+  - api.HTMLSourceElement.media
+  - api.HTMLSourceElement.sizes
+  - api.HTMLSourceElement.src
+  - api.HTMLSourceElement.srcset
+  - api.HTMLSourceElement.type
+  - api.HTMLSourceElement.width
+  - api.HTMLTemplateElement.shadowRootClonable
+  - api.HTMLTemplateElement.shadowRootDelegatesFocus
+  - api.HTMLTemplateElement.shadowRootSerializable
+  - api.HTMLUnknownElement
+  - api.HTMLVideoElement.playsInline
+  - api.HashChangeEvent
+  - api.HashChangeEvent.HashChangeEvent
+  - api.HashChangeEvent.newURL
+  - api.HashChangeEvent.oldURL
+  - api.History
+  - api.History.back
+  - api.History.forward
+  - api.History.go
+  - api.History.length
+  - api.History.pushState
+  - api.History.replaceState
+  - api.History.scrollRestoration
+  - api.History.state
+  - api.ImageData
+  - api.ImageData.ImageData
+  - api.ImageData.colorSpace
+  - api.ImageData.data
+  - api.ImageData.height
+  - api.ImageData.width
+  - api.Location
+  - api.Location.ancestorOrigins
+  - api.Location.assign
+  - api.Location.hash
+  - api.Location.host
+  - api.Location.hostname
+  - api.Location.href
+  - api.Location.origin
+  - api.Location.pathname
+  - api.Location.port
+  - api.Location.protocol
+  - api.Location.reload
+  - api.Location.replace
+  - api.Location.search
+  - api.Location.toString
+  - api.MathMLElement.blur
+  - api.MathMLElement.dataset
+  - api.MathMLElement.focus
+  - api.MathMLElement.nonce
+  - api.MathMLElement.tabIndex
+  - api.MediaError
+  - api.MediaError.code
+  - api.MediaError.message
+  - api.MessageChannel
+  - api.MessageChannel.MessageChannel
+  - api.MessageChannel.port1
+  - api.MessageChannel.port2
+  - api.MessageEvent
+  - api.MessageEvent.MessageEvent
+  - api.MessageEvent.data
+  - api.MessageEvent.lastEventId
+  - api.MessageEvent.origin
+  - api.MessageEvent.ports
+  - api.MessageEvent.source
+  - api.MessagePort
+  - api.MessagePort.close
+  - api.MessagePort.message_event
+  - api.MessagePort.postMessage
+  - api.MessagePort.start
+  - api.NavigateEvent.canIntercept
+  - api.NavigateEvent.hasUAVisualTransition
+  - api.NavigateEvent.intercept
+  - api.NavigateEvent.scroll
+  - api.Navigation.activation
+  - api.NavigationActivation
+  - api.NavigationActivation.entry
+  - api.NavigationActivation.from
+  - api.NavigationActivation.navigationType
+  - api.Navigator
+  - api.Navigator.cookieEnabled
+  - api.Navigator.hardwareConcurrency
+  - api.Navigator.language
+  - api.Navigator.languages
+  - api.Navigator.onLine
+  - api.Navigator.pdfViewerEnabled
+  - api.Navigator.registerProtocolHandler
+  - api.Navigator.unregisterProtocolHandler
+  - api.Navigator.userAgent
+  - api.NotRestoredReasonDetails
+  - api.NotRestoredReasonDetails.reason
+  - api.NotRestoredReasons
+  - api.NotRestoredReasons.children
+  - api.NotRestoredReasons.id
+  - api.NotRestoredReasons.name
+  - api.NotRestoredReasons.reasons
+  - api.NotRestoredReasons.src
+  - api.NotRestoredReasons.url
+  - api.OffscreenCanvasRenderingContext2D.filter
+  - api.OffscreenCanvasRenderingContext2D.fontKerning
+  - api.OffscreenCanvasRenderingContext2D.fontStretch
+  - api.OffscreenCanvasRenderingContext2D.fontVariantCaps
+  - api.OffscreenCanvasRenderingContext2D.imageSmoothingQuality
+  - api.OffscreenCanvasRenderingContext2D.letterSpacing
+  - api.OffscreenCanvasRenderingContext2D.textRendering
+  - api.OffscreenCanvasRenderingContext2D.wordSpacing
+  - api.PageRevealEvent
+  - api.PageRevealEvent.PageRevealEvent
+  - api.PageRevealEvent.viewTransition
+  - api.PageSwapEvent
+  - api.PageSwapEvent.PageSwapEvent
+  - api.PageSwapEvent.activation
+  - api.PageSwapEvent.viewTransition
+  - api.PageTransitionEvent
+  - api.PageTransitionEvent.PageTransitionEvent
+  - api.PageTransitionEvent.persisted
+  - api.PaintRenderingContext2D.beginPath
+  - api.PaintRenderingContext2D.clearRect
+  - api.PaintRenderingContext2D.clip
+  - api.PaintRenderingContext2D.createLinearGradient
+  - api.PaintRenderingContext2D.createPattern
+  - api.PaintRenderingContext2D.createRadialGradient
+  - api.PaintRenderingContext2D.drawImage
+  - api.PaintRenderingContext2D.fill
+  - api.PaintRenderingContext2D.fillRect
+  - api.PaintRenderingContext2D.fillStyle
+  - api.PaintRenderingContext2D.filter
+  - api.PaintRenderingContext2D.getLineDash
+  - api.PaintRenderingContext2D.getTransform
+  - api.PaintRenderingContext2D.globalAlpha
+  - api.PaintRenderingContext2D.globalCompositeOperation
+  - api.PaintRenderingContext2D.imageSmoothingEnabled
+  - api.PaintRenderingContext2D.imageSmoothingQuality
+  - api.PaintRenderingContext2D.isPointInPath
+  - api.PaintRenderingContext2D.isPointInStroke
+  - api.PaintRenderingContext2D.lineCap
+  - api.PaintRenderingContext2D.lineDashOffset
+  - api.PaintRenderingContext2D.lineJoin
+  - api.PaintRenderingContext2D.lineWidth
+  - api.PaintRenderingContext2D.miterLimit
+  - api.PaintRenderingContext2D.resetTransform
+  - api.PaintRenderingContext2D.restore
+  - api.PaintRenderingContext2D.rotate
+  - api.PaintRenderingContext2D.save
+  - api.PaintRenderingContext2D.scale
+  - api.PaintRenderingContext2D.setLineDash
+  - api.PaintRenderingContext2D.setTransform
+  - api.PaintRenderingContext2D.shadowBlur
+  - api.PaintRenderingContext2D.shadowColor
+  - api.PaintRenderingContext2D.shadowOffsetX
+  - api.PaintRenderingContext2D.shadowOffsetY
+  - api.PaintRenderingContext2D.stroke
+  - api.PaintRenderingContext2D.strokeRect
+  - api.PaintRenderingContext2D.strokeStyle
+  - api.PaintRenderingContext2D.transform
+  - api.PaintRenderingContext2D.translate
+  - api.Path2D
+  - api.Path2D.Path2D
+  - api.Path2D.addPath
+  - api.Path2D.arc
+  - api.Path2D.arcTo
+  - api.Path2D.bezierCurveTo
+  - api.Path2D.closePath
+  - api.Path2D.ellipse
+  - api.Path2D.lineTo
+  - api.Path2D.moveTo
+  - api.Path2D.quadraticCurveTo
+  - api.Path2D.rect
+  - api.Path2D.roundRect
+  - api.PopStateEvent
+  - api.PopStateEvent.PopStateEvent
+  - api.PopStateEvent.hasUAVisualTransition
+  - api.PopStateEvent.state
+  - api.PromiseRejectionEvent
+  - api.PromiseRejectionEvent.PromiseRejectionEvent
+  - api.PromiseRejectionEvent.promise
+  - api.PromiseRejectionEvent.reason
+  - api.RadioNodeList
+  - api.RadioNodeList.value
+  - api.Range.createContextualFragment
+  - api.SVGElement.blur
+  - api.SVGElement.dataset
+  - api.SVGElement.focus
+  - api.SVGElement.nonce
+  - api.SVGElement.tabIndex
+  - api.SVGImageElement.decode
+  - api.SVGImageElement.decoding
+  - api.ServiceWorker.error_event
+  - api.ShadowRoot.activeElement
+  - api.ShadowRoot.getHTML
+  - api.ShadowRoot.innerHTML
+  - api.SharedWorker
+  - api.SharedWorker.SharedWorker
+  - api.SharedWorker.error_event
+  - api.SharedWorker.port
+  - api.SharedWorkerGlobalScope
+  - api.SharedWorkerGlobalScope.close
+  - api.SharedWorkerGlobalScope.connect_event
+  - api.SharedWorkerGlobalScope.name
+  - api.Storage
+  - api.Storage.clear
+  - api.Storage.getItem
+  - api.Storage.key
+  - api.Storage.length
+  - api.Storage.removeItem
+  - api.Storage.setItem
+  - api.StorageEvent
+  - api.StorageEvent.key
+  - api.StorageEvent.newValue
+  - api.StorageEvent.oldValue
+  - api.StorageEvent.storageArea
+  - api.StorageEvent.url
+  - api.SubmitEvent
+  - api.SubmitEvent.SubmitEvent
+  - api.SubmitEvent.submitter
+  - api.TextMetrics.actualBoundingBoxAscent
+  - api.TextMetrics.actualBoundingBoxDescent
+  - api.TextMetrics.actualBoundingBoxLeft
+  - api.TextMetrics.actualBoundingBoxRight
+  - api.TextMetrics.emHeightAscent
+  - api.TextMetrics.emHeightDescent
+  - api.TextMetrics.fontBoundingBoxAscent
+  - api.TextMetrics.fontBoundingBoxDescent
+  - api.TimeRanges
+  - api.TimeRanges.end
+  - api.TimeRanges.length
+  - api.TimeRanges.start
+  - api.TrackEvent
+  - api.TrackEvent.TrackEvent
+  - api.TrackEvent.track
+  - api.VisibilityStateEntry
+  - api.VisibilityStateEntry.duration
+  - api.VisibilityStateEntry.entryType
+  - api.VisibilityStateEntry.name
+  - api.VisibilityStateEntry.startTime
+  - api.Window
+  - api.Window.DOMContentLoaded_event
+  - api.Window.alert
+  - api.Window.beforeunload_event
+  - api.Window.blur_event
+  - api.Window.close
+  - api.Window.closed
+  - api.Window.confirm
+  - api.Window.document
+  - api.Window.error_event
+  - api.Window.focus
+  - api.Window.focus_event
+  - api.Window.frameElement
+  - api.Window.frames
+  - api.Window.hashchange_event
+  - api.Window.history
+  - api.Window.languagechange_event
+  - api.Window.length
+  - api.Window.load_event
+  - api.Window.localStorage
+  - api.Window.location
+  - api.Window.locationbar
+  - api.Window.menubar
+  - api.Window.message_event
+  - api.Window.name
+  - api.Window.navigator
+  - api.Window.offline_event
+  - api.Window.online_event
+  - api.Window.open
+  - api.Window.opener
+  - api.Window.originAgentCluster
+  - api.Window.pagehide_event
+  - api.Window.pagereveal_event
+  - api.Window.pageshow_event
+  - api.Window.pageswap_event
+  - api.Window.parent
+  - api.Window.personalbar
+  - api.Window.popstate_event
+  - api.Window.postMessage
+  - api.Window.prompt
+  - api.Window.rejectionhandled_event
+  - api.Window.scrollbars
+  - api.Window.self
+  - api.Window.sessionStorage
+  - api.Window.statusbar
+  - api.Window.stop
+  - api.Window.storage_event
+  - api.Window.toolbar
+  - api.Window.top
+  - api.Window.unhandledrejection_event
+  - api.Window.window
+  - api.Worker
+  - api.Worker.Worker
+  - api.Worker.error_event
+  - api.Worker.message_event
+  - api.Worker.messageerror_event
+  - api.Worker.postMessage
+  - api.Worker.terminate
+  - api.WorkerGlobalScope
+  - api.WorkerGlobalScope.error_event
+  - api.WorkerGlobalScope.importScripts
+  - api.WorkerGlobalScope.languagechange_event
+  - api.WorkerGlobalScope.location
+  - api.WorkerGlobalScope.navigator
+  - api.WorkerGlobalScope.offline_event
+  - api.WorkerGlobalScope.online_event
+  - api.WorkerGlobalScope.rejectionhandled_event
+  - api.WorkerGlobalScope.self
+  - api.WorkerGlobalScope.unhandledrejection_event
+  - api.WorkerLocation
+  - api.WorkerLocation.hash
+  - api.WorkerLocation.host
+  - api.WorkerLocation.hostname
+  - api.WorkerLocation.href
+  - api.WorkerLocation.origin
+  - api.WorkerLocation.pathname
+  - api.WorkerLocation.port
+  - api.WorkerLocation.protocol
+  - api.WorkerLocation.search
+  - api.WorkerLocation.toString
+  - api.WorkerNavigator
+  - api.WorkerNavigator.hardwareConcurrency
+  - api.WorkerNavigator.language
+  - api.WorkerNavigator.languages
+  - api.WorkerNavigator.onLine
+  - api.WorkerNavigator.userAgent
+  - api.Worklet
+  - api.Worklet.addModule
+  - api.WorkletGlobalScope
+  - api.atob
+  - api.btoa
+  - api.clearInterval
+  - api.clearTimeout
+  - api.createImageBitmap
+  - api.crossOriginIsolated
+  - api.isSecureContext
+  - api.origin
+  - api.queueMicrotask
+  - api.reportError
+  - api.setInterval
+  - api.setTimeout
   - css.selectors.active
   - css.selectors.checked
   - css.selectors.disabled
