--- a/features/closewatcher.yml
+++ b/features/closewatcher.yml
@@ -1,5 +1,5 @@
 name: CloseWatcher
-description: "The CloseWatcher interface listens and responds to close requests for developer-implemented user interface components such as sidebars."
+description: "The CloseWatcher API listens and responds to close requests for developer-implemented user interface components such as sidebars or custom keyboards."
 spec: https://html.spec.whatwg.org/multipage/interaction.html#closewatcher
 compat_features:
   - api.CloseWatcher
