New Selection API features

--- a/features/selection.yml
+++ b/features/selection.yml
@@ -2,6 +2,8 @@ name: ::selection
 description: The `::selection` CSS pseudo-element selects text a user has highlighted.
 spec: https://drafts.csswg.org/css-pseudo-4/#selectordef-selection
 caniuse: css-selection
-group: selectors
+group:
+  - selectors
+  - selection
 compat_features:
   - css.selectors.selection
