--- a/features/animations-css.yml
+++ b/features/animations-css.yml
@@ -1,4 +1,4 @@
-name: CSS Animations
+name: Animations (CSS)
 description: The `animation` CSS property animates an element's style over time, using keyframes described in `@keyframes` rules.
 spec: https://drafts.csswg.org/css-animations-2/
 caniuse: css-animation
