--- a/features/web-animations.yml
+++ b/features/web-animations.yml
@@ -1,5 +1,5 @@
 name: Web animations
-description: The Web Animations API programmatically animates elements over time, and allows you to synchronize the animations of multiple elements in JavaScript.
+description: The `animate()` method of `Element` objects programmatically animates elements over time and can synchronize the animations of multiple elements.
 spec: https://drafts.csswg.org/web-animations-1/
 caniuse: web-animation
 group: animation
