--- a/features/backdrop.yml
+++ b/features/backdrop.yml
@@ -1,5 +1,5 @@
 name: "::backdrop"
-description: The `::backdrop` CSS pseudo-element is a box underneath an element, such as a `<dialog>`, that displays in the top layer. It can be used to create obscuring effects distinguishing a modal element from the elements underneath.
+description: The `::backdrop` CSS pseudo-element is a box underneath an element in the top layer, such as a `<dialog>`. It can be used to create obscuring effects distinguishing a modal element from the elements underneath.
 spec: https://drafts.csswg.org/css-position-4/#backdrop
 group: selectors
 compat_features:
