Updates scroll-behavior description

--- a/features/scroll-behavior.yml
+++ b/features/scroll-behavior.yml
@@ -1,5 +1,5 @@
 name: scroll-behavior
-description: The `scroll-behavior` CSS property allows for smooth scrolling for scroll actions not performed by the user, such as those triggered by navigation.
+description: The `scroll-behavior` CSS property allows smooth scrolling for scroll actions not performed by the user, such as those triggered by navigation.
 spec: https://drafts.csswg.org/css-overflow-3/#smooth-scrolling
 group: scrolling
 caniuse: css-scroll-behavior
