Revise physical properties description

--- a/features/physical-properties.yml
+++ b/features/physical-properties.yml
@@ -1,5 +1,5 @@
 name: Physical properties
-description: CSS physical properties set the inset position of an element relative to the corresponding side of a container determined by the element's `position` property.
+description: The physical CSS properties, `top`, `right`, `bottom`, and `left`, set the inset position of an element relative to the corresponding side of a container determined by the element's `position` property.
 spec: https://drafts.csswg.org/css-position-3/#insets
 group: css
 compat_features:
