--- a/features/logical-properties.yml
+++ b/features/logical-properties.yml
@@ -89,3 +89,5 @@ compat_features:
   - css.properties.padding-inline
   - css.properties.padding-inline-end
   - css.properties.padding-inline-start
+  - css.properties.overflow-block
+  - css.properties.overflow-inline
