--- a/features/logical-properties.yml.dist
+++ b/features/logical-properties.yml.dist
@@ -203,3 +203,10 @@ compat_features:
   - css.properties.clear.inline-start
   - css.properties.float.inline-end
   - css.properties.float.inline-start
+
+  # baseline: false
+  # support:
+  #   firefox: "69"
+  #   firefox_android: "79"
+  - css.properties.overflow-block
+  - css.properties.overflow-inline
