Updates overflow-clip-margin description

--- a/features/overflow-clip-margin.yml
+++ b/features/overflow-clip-margin.yml
@@ -1,5 +1,5 @@
 name: Overflow clip margin
-description: "The `overflow-clip-margin` CSS property sets how far outside of an element's bounds overflow content will display when clipped by effects such as `overflow: clip`."
+description: "The `overflow-clip-margin` CSS property sets how far overflow content will display outside the bounds of an element when clipped by effects such as `overflow: clip`."
 spec: https://drafts.csswg.org/css-overflow-4/#overflow-clip-margin
 group: css
 compat_features:
