--- a/features/fedcm.yml
+++ b/features/fedcm.yml
@@ -4,5 +4,7 @@ spec: https://w3c-fedid.github.io/FedCM/
 group: credential-management
 compat_features:
   - api.CredentialsContainer.get.identity_option
+  - api.CredentialsContainer.get.identity_option.context_option
+  - api.CredentialsContainer.get.identity_option.loginHint
   - api.IdentityCredential
   - api.IdentityCredential.token
