--- a/features/fedcm.yml.dist
+++ b/features/fedcm.yml.dist
@@ -4,10 +4,24 @@
 status:
   baseline: false
   support:
-    chrome: "108"
-    chrome_android: "108"
-    edge: "108"
+    chrome: "116"
+    chrome_android: "116"
+    edge: "116"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
   - api.CredentialsContainer.get.identity_option
   - api.IdentityCredential
   - api.IdentityCredential.token
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "116"
+  #   chrome_android: "116"
+  #   edge: "116"
+  - api.CredentialsContainer.get.identity_option.context_option
+  - api.CredentialsContainer.get.identity_option.loginHint
