--- a/features/webauthn.yml.dist
+++ b/features/webauthn.yml.dist
@@ -69,3 +69,66 @@ compat_features:
   #   safari: "16"
   #   safari_ios: "16"
   - api.AuthenticatorAttestationResponse.getTransports
+
+  # baseline: false
+  # support:
+  #   chrome: "89"
+  #   chrome_android: "108"
+  #   edge: "89"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  - api.CredentialsContainer.create.publicKey_option.extensions.credProps
+
+  # baseline: false
+  # support:
+  #   chrome: "98"
+  #   chrome_android: "98"
+  #   edge: "98"
+  #   firefox: "120"
+  #   firefox_android: "120"
+  - api.CredentialsContainer.create.publicKey_option.extensions.minPinLength
+
+  # baseline: false
+  # support:
+  #   chrome: "113"
+  #   chrome_android: "113"
+  #   edge: "113"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.CredentialsContainer.create.publicKey_option.extensions.largeBlob
+
+  # baseline: false
+  # support:
+  #   chrome: "89"
+  #   chrome_android: "108"
+  #   edge: "89"
+  #   firefox: "114"
+  - api.CredentialsContainer.create.publicKey_option.residentKey
+
+  # baseline: false
+  # support:
+  #   chrome: "76"
+  #   chrome_android: "76"
+  #   edge: "79"
+  - api.CredentialsContainer.create.publicKey_option.extensions.credProtect
+
+  # baseline: false
+  # support:
+  #   chrome: "89"
+  #   chrome_android: "108"
+  #   edge: "89"
+  - api.CredentialsContainer.create.publicKey_option.requireResidentKey
+
+  # baseline: false
+  # support:
+  #   chrome: "95"
+  #   chrome_android: "95"
+  #   edge: "95"
+  - api.CredentialsContainer.create.publicKey_option.extensions.payment
+
+  # baseline: false
+  # support:
+  #   chrome: "113"
+  #   chrome_android: "113"
+  #   edge: "113"
+  - api.CredentialsContainer.get.publicKey_option.extensions.largeBlob
