--- a/features/scrollbar-width.yml.dist
+++ b/features/scrollbar-width.yml.dist
@@ -11,3 +11,6 @@ status:
     firefox_android: "64"
 compat_features:
   - css.properties.scrollbar-width
+  - css.properties.scrollbar-width.auto
+  - css.properties.scrollbar-width.none
+  - css.properties.scrollbar-width.thin
