--- a/features/scrollbar-color.yml
+++ b/features/scrollbar-color.yml
@@ -2,3 +2,6 @@ name: scrollbar-color
 description: The `scrollbar-color` CSS property sets the color of the scrollbar track and thumb.
 spec: https://drafts.csswg.org/css-scrollbars-1/#scrollbar-color
 group: scrolling
+compat_features:
+  - css.properties.scrollbar-color
+  - css.properties.scrollbar-color.auto
