--- a/features/text-overflow.yml
+++ b/features/text-overflow.yml
@@ -1,5 +1,5 @@
 name: Text overflow
-description: The `text-overflow` CSS property sets how hidden overflow content is signalled to users. It can be clipped, display an ellipsis (…), or display a custom string.
+description: The `text-overflow` CSS property sets how hidden overflow content appears to users. The property can clip content, truncate content with an ellipsis (…), or truncate with a custom string.
 spec: https://drafts.csswg.org/css-overflow-4/#text-overflow
 group: css
 caniuse: text-overflow
