--- a/features/rlh.yml
+++ b/features/rlh.yml
@@ -1,8 +1,6 @@
 name: rlh unit
 description: The `rlh` CSS length unit is a font-relative length relative to the line height of root element.
 spec: https://drafts.csswg.org/css-values-4/#font-relative-lengths
-status:
-  compute_from: css.types.length.rlh
+group: units
 compat_features:
   - css.types.length.rlh
-  - api.CSS.rlh_static
