--- a/features/ex.yml
+++ b/features/ex.yml
@@ -1,8 +1,6 @@
 name: ex unit
-description: The `ex` CSS length unit is a font-relative length equal to the used x-height of the first available font. X-height is often equal to the height of the lowercase "x".
+description: The `ex` CSS length unit is a font-relative length equal to the used x-height of the first available font. X-height is often equal to the height of the lowercase x.
 spec: https://drafts.csswg.org/css-values-4/#font-relative-lengths
-status:
-  compute_from: css.types.length.ex
+group: units
 compat_features:
   - css.types.length.ex
-  - api.CSS.ex_static
