--- a/features/rem.yml
+++ b/features/rem.yml
@@ -1,9 +1,7 @@
 name: rem
-description: The `rem` CSS length unit is a font-relative length that is equal to the font size of the root html element which for most browsers is 16px.
+description: The `rem` CSS length unit is a font-relative length that is equal to the font size of the root HTML element which for most browsers is `16px`.
 spec: https://drafts.csswg.org/css-values-4/#font-relative-lengths
 caniuse: rem
-status:
-  compute_from: css.types.length.rem
+group: units
 compat_features:
   - css.types.length.rem
-  - api.CSS.rem_static
