--- a/features/barprop.yml
+++ b/features/barprop.yml
@@ -5,3 +5,9 @@ compat_features:
   - api.BarProp
   - api.BarProp.visible
   - api.BarProp.visible.returns_popup
+  - api.Window.locationbar
+  - api.Window.menubar
+  - api.Window.personalbar
+  - api.Window.scrollbars
+  - api.Window.statusbar
+  - api.Window.toolbar
