--- a/features/closewatcher.yml
+++ b/features/closewatcher.yml
@@ -1,6 +1,6 @@
 name: CloseWatcher
 description: "The CloseWatcher API listens and responds to close requests for developer-implemented user interface components such as sidebars or custom keyboards."
-spec: https://html.spec.whatwg.org/multipage/interaction.html#closewatcher
+spec: https://html.spec.whatwg.org/multipage/interaction.html#close-requests-and-close-watchers
 compat_features:
   - api.CloseWatcher
   - api.CloseWatcher.CloseWatcher
