--- a/features/closewatcher.yml
+++ b/features/closewatcher.yml
@@ -1,5 +1,5 @@
 name: CloseWatcher
-description: "The CloseWatcher API listens and responds to close requests for developer-implemented user interface components such as sidebars or custom keyboards."
+description: "The `CloseWatcher` API listens and responds to close requests on in-page components, such as modals, popovers, and sidebars."
 spec: https://html.spec.whatwg.org/multipage/interaction.html#close-requests-and-close-watchers
 compat_features:
   - api.CloseWatcher
