--- a/features/ruby-overhang.yml
+++ b/features/ruby-overhang.yml
@@ -1,5 +1,5 @@
 name: ruby-overhang
-description: The `ruby-overhang` CSS property allows ruby annotations to overlap adjacent text.
+description: The `ruby-overhang` CSS property sets whether ruby annotations may overlap adjacent text.
 spec: https://drafts.csswg.org/css-ruby-1/#ruby-overhang
 group: ruby
 compat_features:
