Adjust speech group name, add comments

--- a/features/speak-as.yml
+++ b/features/speak-as.yml
@@ -1,5 +1,6 @@
 name: speak-as
 description: The `speak-as` CSS property sets how any element's content is spoken.
+# Note: This feature is distinct from `speak-as` in a @counter-style rule.
 spec: https://drafts.csswg.org/css-speech-1/#speaking-props-speak-as
 group:
   - speech
