--- a/features/history.yml
+++ b/features/history.yml
@@ -1,5 +1,5 @@
 name: History
-description: "The History API allows manipulation of the browser session history, from navigations to state management, in the tab or frame that the current page is loaded in."
+description: "The History API manipulates the browser session history, from navigations to state management, in the tab or frame that the current page is loaded in."
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#the-history-interface
 caniuse: history
 compat_features:
