--- a/features/history.yml
+++ b/features/history.yml
@@ -2,6 +2,9 @@ name: History
 description: "The History API allows manipulation of the browser session history, from navigations to state management, in the tab or frame that the current page is loaded in."
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#the-history-interface
 caniuse: history
+# This gets the feature closest to matching Caniuse.
+status:
+  compute_from: api.History.pushState
 compat_features:
   - api.History
   - api.History.back
