Revert "update desc, add compute_from rationale"
This reverts commit 1f2eccf92a1743ca3a63233cad896a313a2fe1c7.

--- a/features/draft/spec/html.yml
+++ b/features/draft/spec/html.yml
@@ -252,6 +252,12 @@ compat_features:
   - api.History.replaceState
   - api.History.scrollRestoration
   - api.History.state
+  - api.ImageData
+  - api.ImageData.ImageData
+  - api.ImageData.colorSpace
+  - api.ImageData.data
+  - api.ImageData.height
+  - api.ImageData.width
   - api.Location
   - api.Location.ancestorOrigins
   - api.Location.assign
