--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -374,6 +374,22 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "3.5"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "2"
+  - api.ImageData
+  - api.ImageData.data
+  - api.ImageData.height
+  - api.ImageData.width
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "3.6"
   #   firefox_android: "4"
   #   safari: "1"
@@ -1768,6 +1784,19 @@ compat_features:
   #   safari: "6"
   #   safari_ios: "7"
   - api.TrackEvent.TrackEvent
+
+  # baseline: high
+  # baseline_low_date: 2016-08-02
+  # baseline_high_date: 2019-02-02
+  # support:
+  #   chrome: "36"
+  #   chrome_android: "36"
+  #   edge: "14"
+  #   firefox: "29"
+  #   firefox_android: "29"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - api.ImageData.ImageData
 
   # baseline: high
   # baseline_low_date: 2016-08-02
@@ -3448,6 +3477,15 @@ compat_features:
   #   safari_ios: "10"
   - api.HTMLVideoElement.playsInline
   - html.elements.video.playsinline
+
+  # baseline: false
+  # support:
+  #   chrome: "92"
+  #   chrome_android: "92"
+  #   edge: "92"
+  #   safari: "15.2"
+  #   safari_ios: "15.2"
+  - api.ImageData.colorSpace
 
   # baseline: false
   # support:
