better spec link

--- a/features/domparser.yml
+++ b/features/domparser.yml
@@ -1,6 +1,6 @@
 name: DOMParser
 description: "The `DOMParser` API parses XML or HTML source code from a string into a DOM Document."
-spec: https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html#dom-parsing-and-serialization
+spec: https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html#the-domparser-interface
 group: parsing-and-serialization
 compat_features:
   - api.DOMParser
