Update Depth sensing name
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webxr-depth-sensing.yml
+++ b/features/webxr-depth-sensing.yml
@@ -1,4 +1,4 @@
-name: WebXR Depth Sensing
+name: Depth sensing
 description: WebXR Depth Sensing provides information about the distance from the user's device to the real-world geometry in the user's environment.
 spec: https://immersive-web.github.io/depth-sensing/
 group: webxr
