Update gamepad feature
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webxr-gamepads.yml
+++ b/features/webxr-gamepads.yml
@@ -1,5 +1,5 @@
-name: WebXR Gamepads
-description: Gamepad API integration with WebXR to communicate the state of various physical inputs (such as buttons, touch pads, and triggers) of an `XRInputSource`.
+name: Gamepad (WebXR)
+description: The `gamepad` attribute of an `XRInputSource` represents an XR input device, such as a motion controller, that reports data from physical inputs (such as buttons, touch pads, and triggers).
 spec: https://immersive-web.github.io/webxr-gamepads-module/
 group: webxr
 compat_features:
