Update hand input feature
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webxr-hand-input.yml
+++ b/features/webxr-hand-input.yml
@@ -1,5 +1,5 @@
-name: WebXR Hand Input
-description: Exposes a fully-articulated hand model as an `XRInputSource` for hand-tracking use during a WebXR session.
+name: Hand input
+description: An `XRHand` object, from the `hand` attribute of an `XRInputSource` object, represents a WebXR session's fully-articulated hand tracking model.
 spec: https://immersive-web.github.io/webxr-hand-input/
 group: webxr
 compat_features:
