Update hit test feature
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webxr-hit-test.yml
+++ b/features/webxr-hit-test.yml
@@ -1,5 +1,5 @@
-name: WebXR Hit Test
-description: WebXR Hit Test allows to place objects in the real world by casting rays that can be evaluated against the underlying platform's understanding of the real world geometry.
+name: Hit test
+description: The `getHitTestResults()` method of an `XRFrame` object helps place objects in an augmented reality session by finding where cast rays intersect with real-world geometry.
 spec: https://immersive-web.github.io/hit-test/
 group: webxr
 compat_features:
