--- a/features/webxr-lighting-estimation.yml
+++ b/features/webxr-lighting-estimation.yml
@@ -1,4 +1,4 @@
-name: WebXR Lighting Estimation
+name: Lighting estimation
 description: WebXR Lighting Estimation allows to query environmental lighting conditions within WebXR sessions.
 spec: https://immersive-web.github.io/lighting-estimation/
 group: webxr
