--- a/features/webxr-layers.yml
+++ b/features/webxr-layers.yml
@@ -1,4 +1,4 @@
-name: WebXR Layers
+name: Layers (WebXR)
 description: WebXR Layers offer a more efficient way to draw immersive content by providing layer types that are managed by the system compositor.
 spec: https://immersive-web.github.io/layers/
 group: webxr
