--- a/features/messageerror.yml
+++ b/features/messageerror.yml
@@ -3,3 +3,4 @@ description: The `messageerror` event fires on a target, such as a window or wor
 spec:
   - https://html.spec.whatwg.org/multipage/indices.html#event-messageerror
   - https://w3c.github.io/ServiceWorker/#eventdef-serviceworkerglobalscope-messageerror
+group: messaging
