--- a/features/broadcast-channel.yml
+++ b/features/broadcast-channel.yml
@@ -2,5 +2,6 @@ name: BroadcastChannel
 description: The `BroadcastChannel` API allows you to send messages between same-origin browsing contexts, such as between the same page loaded in multiple tabs.
 spec: https://html.spec.whatwg.org/multipage/web-messaging.html#broadcasting-to-other-browsing-contexts
 caniuse: broadcastchannel
+group: messaging
 status:
   compute_from: api.BroadcastChannel.BroadcastChannel
