Take Ink Enhancement feature out of draft (#1859)
* Take Ink Enhancement feature out of draft

* Apply suggestions from code review

Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

* Rename file

* Fix dist

* Update features/ink.yml

Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

---------

Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>
Co-authored-by: Florian Scholz <fs@florianscholz.com>
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/ink.yml
+++ b/features/ink.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: Ink API
-description: TODO
+name: Ink
+description: The `navigator.ink` API uses the system compositor to draw to a `<canvas>` element ahead of pointer events, reducing the delay between moving a stylus or cursor and a pen stroke appearing on screen.
 spec: https://wicg.github.io/ink-enhancement/
 compat_features:
   - api.Ink
