--- a/features/cross-document-view-transitions.yml
+++ b/features/cross-document-view-transitions.yml
@@ -1,7 +1,7 @@
 name: Cross-document view transitions
-description: The `@view-transition` CSS rule sets whether a document opts-in to transitions from one document to another. Both the old and new document must opt-in for a transition to be triggered.
+description: The `@view-transition` CSS rule sets whether a document opts-in to transitions between documents in a multi-page application. Both the old and new document must opt-in for a transition to be triggered.
 spec: https://drafts.csswg.org/css-view-transitions-2/#cross-doc-opt-in
-group: transitions
+group: view-transitions
 compat_features:
   - api.CSSViewTransitionRule
   - api.CSSViewTransitionRule.navigation
