--- a/features/view-transitions.yml
+++ b/features/view-transitions.yml
@@ -2,7 +2,7 @@ name: View transitions
 description: View transitions allow you to create animated visual transitions between different states of a document.
 spec: https://drafts.csswg.org/css-view-transitions-1/
 caniuse: view-transitions
-group: transitions
+group: view-transitions
 compat_features:
   - api.Document.startViewTransition
   - api.ViewTransition
