Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webxr-depth-sensing.yml
+++ b/features/webxr-depth-sensing.yml
@@ -1,5 +1,5 @@
 name: Depth sensing
-description: WebXR Depth Sensing provides information about the distance from the user's device to the real-world geometry in the user's environment.
+description: An `XRDepthInformation` object represents a measurement of the distance from the user's device to the real-world geometry in the user's environment.
 spec: https://immersive-web.github.io/depth-sensing/
 group: webxr
 compat_features:
