--- a/features/webxr-layers.yml
+++ b/features/webxr-layers.yml
@@ -1,5 +1,5 @@
 name: Layers (WebXR)
-description: WebXR Layers offer a more efficient way to draw immersive content by providing layer types that are managed by the system compositor.
+description: WebXR layer types, such as `XRCylinderLayer`, `XRCylinderLayer`, `XREquirectLayer`, `XRProjectionLayer` or `XRQuadLayer`, are managed by the system compositor, to reduce latency or resampling.
 spec: https://immersive-web.github.io/layers/
 group: webxr
 status:
