--- a/features/webxr-lighting-estimation.yml
+++ b/features/webxr-lighting-estimation.yml
@@ -1,5 +1,5 @@
 name: Lighting estimation
-description: WebXR Lighting Estimation allows to query environmental lighting conditions within WebXR sessions.
+description: The `XRLightProbe` and `XRLightEstimate` objects represent real-world environmental lighting conditions during a WebXR session.
 spec: https://immersive-web.github.io/lighting-estimation/
 group: webxr
 compat_features:
