--- a/features/webxr-camera.yml
+++ b/features/webxr-camera.yml
@@ -1,4 +1,4 @@
-name: WebXR Raw Camera Access
+name: Raw camera access for WebXR
 description: Direct access to the camera allowing pose-synchronized camera images within a WebXR session.
 spec: https://immersive-web.github.io/raw-camera-access/
 group: webxr
