--- a/features/webxr-dom-overlays.yml
+++ b/features/webxr-dom-overlays.yml
@@ -1,4 +1,4 @@
-name: WebXR DOM Overlays
+name: DOM overlays for WebXR
 description: A DOM overlay shows 2D DOM content as an interactive, transparent layer on top of a WebXR application's WebGL content and camera image.
 spec: https://immersive-web.github.io/dom-overlays/
 group: webxr
