--- a/features/background-attachment.yml
+++ b/features/background-attachment.yml
@@ -1,5 +1,5 @@
 name: background-attachment
-description: The `background-attachment` CSS property sets whether the background layers of an element move as the element scrolls.
+description: The `background-attachment` CSS property sets whether an element's background image or gradient moves as the element scrolls.
 spec: https://drafts.csswg.org/css-backgrounds-3/#the-background-attachment
 group: background
 caniuse: background-attachment
