--- a/features/background-size.yml
+++ b/features/background-size.yml
@@ -1,5 +1,5 @@
 name: background-size
-description: The `background-size` CSS property sets the size of a background layer with the `contain` and `cover` keywords, or with a length or percentage.
+description: The `background-size` CSS property scales or stretches a background based on the size of the element (with the `contain` and `cover` keywords), a length, or percentage.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background-size
 group: background
 compat_features:
