--- a/features/background.yml
+++ b/features/background.yml
@@ -1,5 +1,5 @@
 name: background
-description: The `background` CSS property is a shorthand that sets the properties of the background layers of an element.
+description: The `background` CSS property is a shorthand that sets several background properties at once.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background
 group: background
 compat_features:
