--- a/features/background-color.yml
+++ b/features/background-color.yml
@@ -1,5 +1,5 @@
 name: background-color
-description: The `background-color` CSS property sets the fill color of an element, behind any content and background layers.
+description: The `background-color` CSS property sets the fill color of an element, behind any content and background images or gradients.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background-color
 group: background
 compat_features:
