--- a/features/messageevent.yml.dist
+++ b/features/messageevent.yml.dist
@@ -3,16 +3,16 @@
 
 status:
   baseline: high
-  baseline_low_date: 2018-04-30
-  baseline_high_date: 2020-10-30
+  baseline_low_date: 2022-03-14
+  baseline_high_date: 2024-09-14
   support:
-    chrome: "16"
-    chrome_android: "18"
-    edge: "17"
-    firefox: "26"
-    firefox_android: "26"
-    safari: "6"
-    safari_ios: "6"
+    chrome: "60"
+    chrome_android: "60"
+    edge: "79"
+    firefox: "38"
+    firefox_android: "38"
+    safari: "15.4"
+    safari_ios: "15.4"
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -44,6 +44,20 @@ compat_features:
   - api.MessageEvent.ports
 
   # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "4"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.5"
+  #   firefox_android: "4"
+  #   safari: "4"
+  #   safari_ios: "5"
+  - api.DedicatedWorkerGlobalScope.message_event
+  - api.Worker.message_event
+
+  # baseline: high
   # baseline_low_date: 2016-08-02
   # baseline_high_date: 2019-02-02
   # support:
@@ -57,6 +71,19 @@ compat_features:
   - api.MessageEvent.MessageEvent
 
   # baseline: high
+  # baseline_low_date: 2017-08-01
+  # baseline_high_date: 2020-02-01
+  # support:
+  #   chrome: "60"
+  #   chrome_android: "60"
+  #   edge: "12"
+  #   firefox: "9"
+  #   firefox_android: "9"
+  #   safari: "4"
+  #   safari_ios: "4"
+  - api.Window.message_event
+
+  # baseline: high
   # baseline_low_date: 2018-04-30
   # baseline_high_date: 2020-10-30
   # support:
@@ -68,3 +95,16 @@ compat_features:
   #   safari: "4"
   #   safari_ios: "3.2"
   - api.MessageEvent.lastEventId
+
+  # baseline: high
+  # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
+  # support:
+  #   chrome: "54"
+  #   chrome_android: "54"
+  #   edge: "79"
+  #   firefox: "38"
+  #   firefox_android: "38"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
+  - api.BroadcastChannel.message_event
