--- a/features/postmessage.yml.dist
+++ b/features/postmessage.yml.dist
@@ -3,16 +3,16 @@
 
 status:
   baseline: high
-  baseline_low_date: 2015-07-29
-  baseline_high_date: 2018-01-29
+  baseline_low_date: 2022-03-14
+  baseline_high_date: 2024-09-14
   support:
-    chrome: "4"
-    chrome_android: "18"
-    edge: "12"
-    firefox: "3.5"
-    firefox_android: "4"
-    safari: "4"
-    safari_ios: "5"
+    chrome: "54"
+    chrome_android: "54"
+    edge: "79"
+    firefox: "38"
+    firefox_android: "38"
+    safari: "15.4"
+    safari_ios: "15.4"
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -40,7 +40,6 @@ compat_features:
   #   safari_ios: "5"
   - api.Worker.postMessage
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
@@ -53,3 +52,17 @@ compat_features:
   #   safari: "4"
   #   safari_ios: "5"
   - api.DedicatedWorkerGlobalScope.postMessage
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
+  # support:
+  #   chrome: "54"
+  #   chrome_android: "54"
+  #   edge: "79"
+  #   firefox: "38"
+  #   firefox_android: "38"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
+  - api.BroadcastChannel.postMessage
