--- a/features/messageevent.yml
+++ b/features/messageevent.yml
@@ -9,7 +9,9 @@ group: messaging
 #status:
 #  compute_from:
 compat_features:
-  - api.BroadcastChannel.message_event
+  # Already generated in Broadcast channel.
+  # Revisit once the "keys in impl or feature" question is answered.
+  #- api.BroadcastChannel.message_event
   - api.DedicatedWorkerGlobalScope.message_event
   - api.MessageEvent
   - api.MessageEvent.MessageEvent
