--- a/features/postmessage.yml.dist
+++ b/features/postmessage.yml.dist
@@ -6,14 +6,15 @@ status:
   baseline_low_date: 2015-07-29
   baseline_high_date: 2018-01-29
   support:
-    chrome: "4"
+    chrome: "2"
     chrome_android: "18"
     edge: "12"
-    firefox: "3.5"
+    firefox: "3"
     firefox_android: "4"
     safari: "4"
-    safari_ios: "5"
+    safari_ios: "3.2"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
@@ -40,7 +41,6 @@ compat_features:
   #   safari_ios: "5"
   - api.Worker.postMessage
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
@@ -53,3 +53,16 @@ compat_features:
   #   safari: "4"
   #   safari_ios: "5"
   - api.DedicatedWorkerGlobalScope.postMessage
+
+  # baseline: high
+  # baseline_low_date: 2015-09-22
+  # baseline_high_date: 2018-03-22
+  # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "41"
+  #   firefox_android: "41"
+  #   safari: "5"
+  #   safari_ios: "4.2"
+  - api.MessagePort.postMessage
