--- a/features/hashchange.yml
+++ b/features/hashchange.yml
@@ -1,4 +1,4 @@
-name: HashChangeEvent
+name: hashchange
 description: "The `HashChangeEvent` is emitted when the fragment identifier of the current page URL has changed."
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#the-hashchangeevent-interface
 caniuse: hashchange
