--- a/features/hashchange.yml
+++ b/features/hashchange.yml
@@ -1,5 +1,5 @@
 name: hashchange
-description: "The `HashChangeEvent` is emitted when the fragment identifier of the current page URL has changed."
+description: "The `hashchange` event fires when the URL fragment identifier (the part of the URL starting with `#`) of the current page has changed."
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#the-hashchangeevent-interface
 caniuse: hashchange
 compat_features:
