--- a/features/hashchange.yml
+++ b/features/hashchange.yml
@@ -7,3 +7,4 @@ compat_features:
   - api.HashChangeEvent.HashChangeEvent
   - api.HashChangeEvent.newURL
   - api.HashChangeEvent.oldURL
+  - api.Window.hashchange_event
