--- a/features/location.yml.dist
+++ b/features/location.yml.dist
@@ -26,6 +26,7 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "1"
   #   safari_ios: "1"
+  - api.Document.location
   - api.Location
   - api.Location.hash
   - api.Location.host
@@ -37,6 +38,7 @@ compat_features:
   - api.Location.reload
   - api.Location.replace
   - api.Location.search
+  - api.Window.location
 
   # baseline: high
   # baseline_low_date: 2015-07-29
